refactor: SectionRepository 에서 하던 부분 Service로 이동